plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.apache.commons:commons-jexl3:3.6.2")
    implementation 'org.apache.logging.log4j:log4j-core:2.0-beta9'
    implementation 'org.apache.logging.log4j:log4j-api:2.0-beta9'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'net.java.dev.jna:jna:4.4.0'
    implementation 'net.java.dev.jna:platform:3.4.0'
    implementation 'com.electronwill.night-config:toml:3.6.3'
    implementation 'com.electronwill.night-config:json:3.6.3'
}

shadowJar {
    archiveClassifier.set('shadow')

    // Relocate Night Config packages
    relocate 'com.electronwill.nightconfig', 'dev.kostromdan.mods.crash_assistant.nightconfig'
    relocate 'org.apache.commons.jexl3', 'dev.kostromdan.mods.crash_assistant.commons.jexl3'
    relocate 'org.apache.commons.logging', 'dev.kostromdan.mods.crash_assistant.commons.logging'

    dependencies {
        exclude(dependency('org.apache.logging.log4j:.*'))
        exclude(dependency('commons-io:commons-io:2.15.1'))
//        exclude(dependency('net.java.dev.jna:.*'))
        exclude(dependency('com.google.code.gson:.*'))
        exclude "META-INF/maven/**"
        exclude "META-INF/LICENSE.txt"
        exclude "META-INF/NOTICE.txt"
    }
}

build.finalizedBy(shadowJar)
